Align account menu items correctly
[#165143957]

--- a/src/components/layout/accountMenu/AccountMenuContainer.less
+++ b/src/components/layout/accountMenu/AccountMenuContainer.less
@@ -1,7 +1,7 @@
 @import '../../../../resources/styles/_colours.less';
 
 .account-menu {
-    padding: 5px 0;
+  padding: 5px 0;
 
   li {
     margin: 0;
@@ -17,8 +17,12 @@
       width: 100%;
       flex: 1;
 
-      img {
+      .icon-container {
         margin-right: 14px;
+        width: 24px;
+        height: 24px;
+        text-align: center;
+        line-height: 1;
       }
     }
   }
